ratingsboard/manifests/eks/20-ingress-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ratingsboard
  namespace: ratingsboard
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend: { service: { name: reporting-api, port: { number: 8000 } } }
          - path: /
            pathType: Prefix
            backend: { service: { name: dashboard, port: { number: 80 } } }
